2006-02-16  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/core.h: Fix jit_ldxi_* with big displacement.

2006-01-23  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Fix comments in config.h.in.
	
2005-11-25  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/sparc/fp.h: Fix header comment.
	* lightning/ppc/fp.h: Fix header comment.

2005-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/asm.h (JCm, JCSm, JNCm, JNCSm): New.

2004-11-26  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/funcs.h (_jit_epilog): Remove unused variable.

2004-11-13  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/funcs.h [__linux__]: Include sys/mman.h.

2004-11-09  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/sparc/fp.h: Fix fp-to-integer conversions.
	* lightning/ppc/testfp.c: Test fp-to-integer conversions
	of integer numbers.
	* lightning/ppc/testfp.ok: Adjust for the above.

2004-11-08  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/testfp.c: Always flush code before
	testing it.

2004-11-08  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/ppc/fp.h: Do not clobber f31.

2004-11-08  Paolo Bonzini  <bonzini@gnu.org>

	* lightning.h: New name of...
	* lightning-inst.h: ... this file.
	* lightning.h.in: Removed.

	* opcodes/disass.c: Include config.h.
	* tests/add.c: Include config.h.
	* tests/bp.c: Include config.h.
	* tests/fib.c: Include config.h.
	* tests/fibdelay.c: Include config.h.
	* tests/fibit.c: Include config.h.
	* tests/funcfp.c: Include config.h.
	* tests/incr.c: Include config.h.
	* tests/printf.c: Include config.h.
	* tests/printf2.c: Include config.h.
	* tests/rpn.c: Include config.h.
	* tests/rpnfp.c: Include config.h.
	* tests/testfp.c: Include config.h.

2004-10-12  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/fp.h: Fix bugs in conditional branches.

2004-10-10  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/funcs.h: Fix pasto in jit_flush_code.

2004-10-08  Paolo Bonzini  <bonzini@gnu.org>
