@@ -1,3 +1,8 @@
+2006-05-16  Bruno Haible  <bruno@clisp.org>
+
+	* lightning/asm-common.h: Don't use __func__ nor __FUNCTION__ if
+	not compiling with GNU C.
+
 2006-02-16  Paolo Bonzini  <bonzini@gnu.org>
 
 	* lightning/ppc/core.h: Fix jit_ldxi_* with big displacement.
